concluso - ritocco stile

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -82,4 +82,13 @@ body {
       }
   }
   
+
+  #id {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
   
+  .navbar-brand {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
